manifests/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volume-cleaner-controller-egress
  namespace: zone
spec:
  podSelector:
    matchLabels:
      app: volume-cleaner-controller
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volume-cleaner-scheduler-egress
  namespace: zone
spec:
  podSelector:
    matchLabels:
      app: volume-cleaner-scheduler
  egress:
    - ports:
      - port: 443
        protocol: TCP
  policyTypes:
    - Egress
